<resources>
    <string name="app_name">trabalho_gestaoEstoqueVeicular</string>
    <string name="bem_vindo">Bem-vindo !</string>
    <string name="login">Login</string>
    <string name="informe_seu_e_mail">Informe seu e-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="informe_sua_senha">Informe sua senha</string>
    <string name="ainda_n_o_possui_uma_conta_cadastre_se">Ainda não possui uma conta? Cadastre-se</string>
    <string name="descLogin">Acesse sua conta e gerencie todo seu inventário de veículos de forma simples e rápida. Caso não possua uma conta, crie uma agora mesmo!</string>
    <string name="descCadUser">Preencha as informações abaixo. Ao clicar em cadastrar, seu usuário será registrado no sistema.</string>
    <string name="cadastrar_usuario">Cadastrar usuário</string>
    <string name="nome">Nome</string>
    <string name="nome_completo">Nome completo</string>
    <string name="e_mail">E-mail</string>
    <string name="telefone">Telefone</string>
    <string name="numero_celular">Número de telefone ou celular</string>
    <string name="crie_uma_senha_segura">Crie uma senha segura</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="voltar_para_a_tela_de_login">Voltar para a tela de login</string>
    <string name="cadastrar_veiculo">CADASTRAR VEÍCULO</string>
    <string name="consultar_veiculo">CONSULTAR VEÍCULO</string>
    <string name="alterar_veiculo">ALTERAR VEÍCULO</string>
    <string name="remover_veiculo">REMOVER VEÍCULO</string>
    <string name="desc_menu">A maneira mais fácil de encontrar e gerenciar seus veículos</string>
    <string name="desc_menu2">Aqui você pode cadastrar, consultar e atualizar o seu estoque de carros de forma rápida e prática. Gerencie informações como marca, modelo, cor, ano e tipo de combustível com facilidade.</string>
    <string name="cadastrar_um_veiculo">Cadastrar um veículo</string>
    <string name="marca_do_veiculo">Marca do veículo</string>
    <string name="modelo_do_veiculo">Modelo do veículo</string>
    <string name="cor">Cor</string>
    <string name="ano">Ano</string>
    <string name="cor_do_veiculo">Cor do veículo</string>
    <string name="combustivel">Combustível</string>
    <string name="ano_de_fabricacao">Ano de fabricação</string>
    <string name="tipo_de_combustivel">Tipo de combustível</string>
    <string name="consultar_veiculos">Consultar veículos</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="voltar_para_o_menu">Voltar para o menu</string>
    <string name="desc_cad">Preencha as informações abaixo para cadastrar um veículo no estoque. Ao clicar em cadastrar, o veículo estará disponível para consultas e gerenciamento.</string>
    <string name="consultar">CONSULTAR</string>
    <string name="buscar">BUSCAR</string>
</resources>